# rustai

./: Cargo.toml  README.md
output/: ollama_output.txt
src/: analytics.rs  file_handler.rs  main.rs  models.rs  ollama.rs  rag.rs  ui.rs
src/plugins/: mode.rs
tourist_data/: conversations.db  response_20250803_195204.txt  response_20250803_195700.txt  response_20250803_200125.txt  response_20250803_201522.txt  response_20250803_202144.txt  response_20250803_202521.txt  response_20250803_202943.txt
